--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "body-parser": "~1.10.0",
     "debug": "~2.1.0",
     "jade": "~1.9.1",
-    "i18n": "~0.5.0"
+    "i18n": "~0.5.0",
+    "nodemailer": "~1.3.1",
+    "express-validator": "~2.8.0"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
